adicion de modulo de focus group decoder

--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -700,6 +700,7 @@
                                 <option value="CustomerJourney" data-i18n="LanzarEstudio.modCustomerJourney">Modulo Customer Journey</option>
                                 <option value="Reputacion" data-i18n="LanzarEstudio.modReputacion">Modulo Reputación</option>
                                 <option value="PruebaProducto" data-i18n="LanzarEstudio.modPruebaProducto">Modulo Prueba de Producto</option>
+                                <option value="focus_decoder" data-i18n="LanzarEstudio.modFocusDecoder">Módulo Focus Group Decoder</option>
                             </select>
                             <div class="button-group" style="margin-bottom: 15px;">
                                 <button class="btn btn-primary" id="AgregarModuloBTN" type="button" style="font-family: hedliner;" data-i18n="LanzarEstudio.btAdd">
