--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -346,7 +346,7 @@
                                 <a id="CustomerJourneyBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#CustomerJourney" data-bs-toggle="list" style="width: 90%;margin-right: 5px;margin-left: 5px;margin-top: 10px;border-radius : 13px;height: 46px;font-family: hedliner;font-weight: bold;" data-i18n="AnalisisDeDatos.btCustomerJourney">Customer Journey</a>
                                 <a id="ReputacionBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#Reputacion" data-bs-toggle="list" style="width: 90%;margin-right: 5px;margin-left: 5px;margin-top: 10px;border-radius : 13px;height: 46px;font-family: hedliner;font-weight: bold;" data-i18n="AnalisisDeDatos.btReputacion">Reputación</a>
                                 <a id="PruebaProductoBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#PruebaProducto" data-bs-toggle="list" style="width: 90%;margin-right: 5px;margin-left: 5px;margin-top: 10px;border-radius : 13px;height: 46px;font-family: hedliner;font-weight: bold;" data-i18n="AnalisisDeDatos.btPruebaProducto">Prueba de Producto</a>
-                                <a id="FocusDecoderBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#FocusDecoder" data-bs-toggle="list" style="width: 90%;margin-right: 5px;margin-left: 5px;margin-top: 10px;border-radius : 13px;height: 46px;font-family: hedliner;font-weight: bold;" data-i18n="AnalisisDeDatos.btFocusDecoder">Focus Group Decoder</a>
+                                <a id="FocusDecoderBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#FocusDecoder" data-bs-toggle="list" style="width: 90%;margin-right: 5px;margin-left: 5px;margin-top: 10px;border-radius : 13px;height: 46px;font-family: hedliner;font-weight: bold;" data-i18n="AnalisisDeDatos.btFocusDecoder">Focus Groups Decoder</a>
                                 
                                 <div style="height: 95%;"></div>
                             </div>
@@ -785,14 +785,14 @@
 
                                 <div id="FocusDecoder" class="tab-pane fade" role="tabpanel">
                                     <div class="d-xl-flex flex-row justify-content-xl-start align-items-xl-end list-group">
-                                        <a class="list-group-item list-group-item-action" href="#A_FocusDecoder" data-bs-toggle="list" style="width: 20%;margin: 5px;font-family: hedliner;border-radius : 13px;border-top-color: var(--bs-card-border-color);border-right-color: var(--bs-card-border-color);border-bottom-color: var(--bs-list-group-active-bg);border-left-color: var(--bs-card-border-color);height: 65px;" data-i18n="AnalisisDeDatos.btFocusDecoder">Analisis de Focus Group Decoder</a>
+                                        <a class="list-group-item list-group-item-action" href="#A_FocusDecoder" data-bs-toggle="list" style="width: 20%;margin: 5px;font-family: hedliner;border-radius : 13px;border-top-color: var(--bs-card-border-color);border-right-color: var(--bs-card-border-color);border-bottom-color: var(--bs-list-group-active-bg);border-left-color: var(--bs-card-border-color);height: 65px;" data-i18n="AnalisisDeDatos.btFocusDecoder">Analisis de Focus Groups Decoder</a>
                                     </div>
 
                                     <div class="row">
                                         <div class="col">
                                             <div class="tab-content">
                                                 <div id="A_FocusDecoder" class="tab-pane fade" role="tabpanel">
-                                                    <h3 data-i18n="AnalisisDeDatos.titleFocusDecoder">Análisis de Focus Group Decoder</h3>
+                                                    <h3 data-i18n="AnalisisDeDatos.titleFocusDecoder">Análisis de Focus Groups Decoder</h3>
                                                     <p data-i18n="AnalisisDeDatos.descFocusDecoder">Este análisis especializado procesa y decodifica transcripciones de focus groups para extraer insights clave. Se identifican patrones de conversación, temas recurrentes, emociones expresadas, dinámicas de grupo y opiniones convergentes o divergentes. El análisis ofrece una comprensión profunda de las percepciones colectivas y recomendaciones basadas en las discusiones grupales.</p>
                                 
                                                     <!-- Sección de controles mejorada -->
