tried to move style variables to bootstrap, pero bootstrap ist scheisse. (Hail Tailwind)

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -43,15 +43,15 @@
 </head>
 
 <body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover; backdrop-filter: brightness(167%) contrast(51%) invert(15%);">
-    <div id="overlay" style="display: flex;">
+    <!-- <div class="d-flex" id="overlay"> -->
         
     </div>
 
-    <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center" id="Header-BG" style="height: 8%;width: 100%;background: #0a0a0adc;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
-        <div class="row d-flex flex-column justify-content-center align-content-center" style="height: 100%;">
-            <div class="col d-flex flex-column justify-content-center align-content-center" style="height: 100%;padding-right: 8px;padding-left: 8px;padding-top: 0px;margin-left: 15px;">
-                <h1 class="fw-semibold d-flex flex-row align-items-center order-1" id="Bot-Name" style="margin: 0px;font-family: hedliner;margin-top: 6px;color: #aaa7aa;">Coso Bot</h1>
-                <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;margin-top: -2px;color: var(--bs-CR-orange-2);">En línea</p>
+    <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center w-100" id="Header-BG" style="height: 8%;background: #0a0a0adc;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
+        <div class="row d-flex flex-column justify-content-center align-content-center h-100">
+            <div class="col d-flex flex-column justify-content-center align-content-center h-100" style="padding-right: 8px;padding-left: 8px;padding-top: 0px;margin-left: 15px;">
+                <h1 class="fw-semibold d-flex flex-row align-items-center order-1 m-0 mt-1" id="Bot-Name" style="font-family: hedliner;color: #aaa7aa;">Coso Bot</h1>
+                <p class="fw-normal d-flex flex-row order-2 m-0 ps-1" id="Bot-Status" style="color: var(--bs-CR-orange-2);">En línea</p>
             </div>
         </div>
     </div>
@@ -104,9 +104,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.2/tinycolor.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="Chat.js"></script>
-    <script>
+    <!-- <script>
         window.onload = initializePage;
-    </script>
+    </script> -->
 </body>
 
 </html>
