--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -50,8 +50,8 @@
     <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center w-100" id="Header-BG" style="height: 8%;background: linear-gradient(160deg, var(--bs-CR-black) 0%, #2f3034 40%, var(--bs-CR-gray) 100%);backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
         <div class="row d-flex flex-column justify-content-center align-content-center h-100">
             <div class="col d-flex flex-column justify-content-center align-content-center h-100" style="padding-right: 8px;padding-left: 8px;padding-top: 0px;margin-left: 15px;">
-                <h1 class="fw-semibold d-flex flex-row align-items-center order-1 m-0 mt-1" id="Bot-Name" style="font-family: hedliner;color: #aaa7aa;">Coso Bot</h1>
-                <p class="fw-normal d-flex flex-row order-2 m-0 ps-1" id="Bot-Status" style="color: var(--bs-CR-orange-2);">En línea</p>
+                <h1 class="fw-semibold d-flex flex-row align-items-center order-1 m-0 mt-1" id="Bot-Name" style="font-family: hedliner;">Coso Bot</h1>
+                <p class="fw-normal d-flex flex-row order-2 m-0 ps-1" id="Bot-Status">En línea</p>
             </div>
         </div>
     </div>
@@ -60,13 +60,13 @@
             <div class="col text-truncate d-sm-block d-md-block d-lg-block d-xl-block text-wrap" style="height: 100%;overflow-y: visible;">
                 <div class="row px-3 py-2" id="Empty-Feed" style="display: flex;">
                     <div class="col d-flex d-xl-flex flex-column justify-content-center align-items-center align-self-center justify-content-xl-center align-items-xl-center" style="overflow: hidden;overflow-y: auto;min-height: 30.5rem;max-height: 30.5rem;height: auto;">
-                        <div class="card border-0 rounded-4" id="EmptyF-BG" style="background: linear-gradient(160deg,#4b4b4b 0%, #2f3034 40%, var(--bs-CR-black) 100%);">
+                        <div class="card border-0 rounded-4" id="EmptyF-BG">
                             <div class="card-body text-center">
-                                <p class="card-text" style="color: #aaa7aa;">Escribe algo para charlar con</p>
-                                <p class="card-text" style="font-family: hedliner;font-size: 25px;color: #fff;"><strong>Cheetah Research</strong></p>
+                                <p class="card-text" style="">Escribe algo para charlar con</p>
+                                <p class="card-text fw-bold" style="font-family: hedliner;font-size: 25px;color: #fff;">Cheetah Research</p>
                                 <img src="assets/img/Cheetah%20Paw%20Icon.svg" style="width: 60px;height: 60px;filter: invert(70%);">
                                 <p class="card-text" style="padding: 30px;">
-                                    <span style="font-family: League Spartan;color: var(--bs-CR-orange-2);">Pista: ¡Di Hola!</span>
+                                    <span style="font-family: League Spartan;">Pista: ¡Di Hola!</span>
                                 </p>
                             </div>
                         </div>
