Re-integrated overlay and scripts

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -43,7 +43,7 @@
 </head>
 
 <body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover;">
-    <!-- <div class="d-flex" id="overlay"> -->
+    <div class="d-flex" id="overlay">
         
     </div>
 
@@ -121,9 +121,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.2/tinycolor.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="Chat.js"></script>
-    <!-- <script>
+    <script>
         window.onload = initializePage;
-    </script> -->
+    </script>
 </body>
 
 </html>
